--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Entrar - Acampamento ÉFETA</title>
+  <title>Login - Acampamento ÉFETA</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap');
 
@@ -22,24 +22,64 @@
       align-items: center;
     }
 
-    button {
-      padding: 15px 40px;
+    .login-container {
+      background-color: #ffffff;
+      padding: 40px;
+      border-radius: 16px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      max-width: 400px;
+      text-align: center;
+    }
+
+    .login-container h1 {
+      font-size: 2rem;
+      color: #e5a24c;
+      margin-bottom: 24px;
+    }
+
+    .login-container input {
+      width: 100%;
+      padding: 14px;
+      margin-bottom: 16px;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      font-size: 1rem;
+    }
+
+    .login-container button {
+      width: 100%;
+      padding: 14px;
       background-color: #e5a24c;
       color: white;
       border: none;
       border-radius: 8px;
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       font-weight: bold;
       cursor: pointer;
       transition: background-color 0.3s;
     }
 
-    button:hover {
+    .login-container button:hover {
       background-color: #c98633;
+    }
+
+    .footer {
+      margin-top: 20px;
+      font-size: 0.9rem;
+      color: #999;
     }
   </style>
 </head>
 <body>
-  <button onclick="window.location.href='index.html'">Entrar</button>
+  <div class="login-container">
+    <h1>Acampamento ÉFETA</h1>
+    <form onsubmit="event.preventDefault(); window.location.href='index.html'">
+      <input type="text" placeholder="Usuário" required />
+      <input type="password" placeholder="Senha" required />
+      <button type="submit">Entrar</button>
+    </form>
+    <div class="footer">© 2025 Raiana Hellmann</div>
+  </div>
 </body>
 </html>
